testing databricks integration

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,50 +1,24 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
-name: Python application
+name: Run a notebook in databricks on PRs
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-permissions:
-  contents: read
+ pull_request:
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python 3.9.13
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.9.13"
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
-      run: |
-        pytest
-    - name: Pull Data
-      run: |
-        python main.py  --get_data True --roboflow_api_key ${{secrets.ROBOFLOW_API_KEY}} --train_model False --register_model False  --remove_logs False --logging_level INFO
-    - name: Train Model
-      run: |
-        python main.py  --get_data False --train_model True --register_model False  --remove_logs False --logging_level INFO
-    - name: Register Model
-      run: |
-        python main.py  --get_data False --train_model False --register_model True  --model_path "runs/detect/train" --remove_logs False --logging_level INFO
-
-
+ run-databricks-notebook:
+   runs-on: ubuntu-latest
+   steps:
+     - name: Checkout repo
+       uses: actions/checkout@v2
+     - name: Run a databricks notebook
+       uses: databricks/run-notebook@v0
+       with:
+         local-notebook-path: hellow_world.py
+         databricks-host: ${{ secrets.DATABRICKS_HOST }}
+         databricks-token: ${{ secrets.DATABRICKS_TOKEN }}
+         git-commit: ${{ github.event.pull_request.head.sha }}
+         new-cluster-json: >
+           {
+             "num_workers": 1,
+             "spark_version": "10.4.x-scala2.12",
+             "node_type_id": "Standard_D3_v2"
+           }
