--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -13,13 +13,18 @@ jobs:
      - name: Run a databricks notebook
        uses: databricks/run-notebook@v0
        with:
-         local-notebook-path: hellow_world.py
+         local-notebook-path: hello_world.py
          databricks-host: ${{ secrets.DATABRICKS_HOST }}
          databricks-token: ${{ secrets.DATABRICKS_TOKEN }}
-         git-commit: ${{ github.event.pull_request.head.sha }}
+         git-commit: ${{ github.event.pull_request.head.sha || github.sha }}
          new-cluster-json: >
            {
              "num_workers": 1,
-             "spark_version": "10.4.x-scala2.12",
-             "node_type_id": "Standard_D3_v2"
+             "spark_version": "11.3.x-scala2.12",
+             "node_type_id": "i3.xlarge"
            }
+         libraries-json: >
+           [{"pypi": "roboflow==0.2.31"}, {"pypi": "ultralytics==8.0.20"},{"pypi": "mlflow==2.2.1"}]
+          
+
+
