--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,7 +24,7 @@ jobs:
              "node_type_id": "i3.xlarge"
            }
          libraries-json: >
-           {[{"pypi": "roboflow==0.2.31"}, {"pypi": "ultralytics==8.0.20"},{"pypi": "mlflow==2.2.1"}]}
+           {"""[{"pypi": "roboflow==0.2.31"}, {"pypi": "ultralytics==8.0.20"},{"pypi": "mlflow==2.2.1"}]""""}
           
 
 
