--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -17,12 +17,7 @@ jobs:
          databricks-host: ${{ secrets.DATABRICKS_HOST }}
          databricks-token: ${{ secrets.DATABRICKS_TOKEN }}
          git-commit: ${{ github.event.pull_request.head.sha || github.sha }}
-         new-cluster-json: >
-           {
-             "num_workers": 1,
-             "spark_version": "11.3.x-scala2.12",
-             "node_type_id": "i3.xlarge"
-           }
+         existing-cluster-id: 0310-235344-6fpcvwav
           
 
 
