"Another one" - DJ Khalid

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -35,7 +35,14 @@ jobs:
               }
             }]
          notebook-params-json: >
-            [{"key1":"value1", "key2":"value2"}]
+            [
+              {
+                  "base_parameters":{
+                    "key1":"value1",
+                    "key2":"value2"
+                  }
+              }
+            ]
            
            
           
